# ll-datasets

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
clients/: C4200m_client.py  batch_process.sh  celva_client.py  celva_pipeline.sh  client.py  commands.sh  compressing.py  download_celva.py  download_models.py  download_udpipe_model.sh  efcamdat_client.py  fce_client.py  human_tokenization_batch_process.sh  jsonify_efcamdat_traintest_splits.py  pyproject.toml  reduce_mlms_batch_json.py  sent_tokenize.py  split.sh  teanga_celva.py  tokenization_batch_process.sh  tokenized_batch_to_mlm_batch.py
clients/docs/: mlm-processing-pipeline,md  redesigning.md
clients/run_configs/: tokenized_train_split_cleaned_efcamdat_to_mlm.json
docs/: index.md  pipelines.md  resetting_poetry.md
ll_datasets/: FCE.py  __init__.py  c4200m.py  celva.py  efcamdat.py  fce.py  ll_datatypes.py  models.py  utils.py
