[tool.poetry]
name = "clients"
version = "0.1.0"
description = ""
authors = ["berstearns <bernardo.stearns@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
llm-agreement-metrics = {git = "https://github.com/language-learning-modelling/selva-agreement-metrics.git", subdirectory = "llm-agreement-metrics/"}
spacy-udpipe = "^1.0.0"
ll-datasets = {path = ".."}
datasets = "^3.1.0"
pyarrow = "^18.0.0"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
