[tool.poetry]
name = "clients"
version = "0.1.0"
description = ""
authors = ["berstearns <bernardo.stearns@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
llm-agreement-metrics = {path = "/home/berstearns/projects/language-learning-modelling/selva-agreement-metrics/llm-agreement-metrics"}
spacy-udpipe = "^1.0.0"
ll-datasets = {path = ".."}
evaluate = "^0.4.3"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
